fixed contact form spacing with footer

--- a/src/css/contactForm.css
+++ b/src/css/contactForm.css
@@ -12,7 +12,7 @@
   height: 364px;
   max-width: 884px;
 
-  margin: 0px auto 67px auto;
+  margin: auto;
 
   background-color: #f5faff;
   border-radius: 4px;
